# paint-Qt-OpenGL

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  README.md
src/: CMakeLists.txt
src/Model/: OpenGLWidget.cpp  OpenGLWidget.h
src/Model/Shapes/: Circle.cpp  Circle.h
src/Model/Shapes/Base/: Shape.cpp  Shape.h
src/View/: MainWindow.cpp  MainWindow.h  MainWindow.ui
